// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opentelemetry context propagation should work correctly 1`] = `
{
  "data": {
    "topProducts": [
      {
        "inStock": true,
        "name": "Table",
        "price": 899,
        "reviews": [
          {
            "author": {
              "id": "1",
              "name": "Ada Lovelace",
              "reviews": [
                {
                  "body": "Love it!",
                  "id": "1",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
                {
                  "body": "Too expensive.",
                  "id": "2",
                  "product": {
                    "inStock": false,
                    "name": "Couch",
                    "price": 1299,
                    "shippingEstimate": 0,
                    "upc": "2",
                    "weight": 1000,
                  },
                },
              ],
              "username": "@ada",
            },
            "body": "Love it!",
            "id": "1",
          },
          {
            "author": {
              "id": "2",
              "name": "Alan Turing",
              "reviews": [
                {
                  "body": "Could be better.",
                  "id": "3",
                  "product": {
                    "inStock": true,
                    "name": "Chair",
                    "price": 54,
                    "shippingEstimate": 25,
                    "upc": "3",
                    "weight": 50,
                  },
                },
                {
                  "body": "Prefer something else.",
                  "id": "4",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
              ],
              "username": "@complete",
            },
            "body": "Prefer something else.",
            "id": "4",
          },
        ],
        "shippingEstimate": 50,
        "upc": "1",
        "weight": 100,
      },
      {
        "inStock": false,
        "name": "Couch",
        "price": 1299,
        "reviews": [
          {
            "author": {
              "id": "1",
              "name": "Ada Lovelace",
              "reviews": [
                {
                  "body": "Love it!",
                  "id": "1",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
                {
                  "body": "Too expensive.",
                  "id": "2",
                  "product": {
                    "inStock": false,
                    "name": "Couch",
                    "price": 1299,
                    "shippingEstimate": 0,
                    "upc": "2",
                    "weight": 1000,
                  },
                },
              ],
              "username": "@ada",
            },
            "body": "Too expensive.",
            "id": "2",
          },
        ],
        "shippingEstimate": 0,
        "upc": "2",
        "weight": 1000,
      },
      {
        "inStock": true,
        "name": "Chair",
        "price": 54,
        "reviews": [
          {
            "author": {
              "id": "2",
              "name": "Alan Turing",
              "reviews": [
                {
                  "body": "Could be better.",
                  "id": "3",
                  "product": {
                    "inStock": true,
                    "name": "Chair",
                    "price": 54,
                    "shippingEstimate": 25,
                    "upc": "3",
                    "weight": 50,
                  },
                },
                {
                  "body": "Prefer something else.",
                  "id": "4",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
              ],
              "username": "@complete",
            },
            "body": "Could be better.",
            "id": "3",
          },
        ],
        "shippingEstimate": 25,
        "upc": "3",
        "weight": 50,
      },
    ],
    "users": [
      {
        "id": "1",
        "name": "Ada Lovelace",
        "reviews": [
          {
            "body": "Love it!",
            "id": "1",
            "product": {
              "inStock": true,
              "name": "Table",
              "price": 899,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Love it!",
                  "id": "1",
                },
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Prefer something else.",
                  "id": "4",
                },
              ],
              "shippingEstimate": 50,
              "upc": "1",
              "weight": 100,
            },
          },
          {
            "body": "Too expensive.",
            "id": "2",
            "product": {
              "inStock": false,
              "name": "Couch",
              "price": 1299,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Too expensive.",
                  "id": "2",
                },
              ],
              "shippingEstimate": 0,
              "upc": "2",
              "weight": 1000,
            },
          },
        ],
        "username": "@ada",
      },
      {
        "id": "2",
        "name": "Alan Turing",
        "reviews": [
          {
            "body": "Could be better.",
            "id": "3",
            "product": {
              "inStock": true,
              "name": "Chair",
              "price": 54,
              "reviews": [
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Could be better.",
                  "id": "3",
                },
              ],
              "shippingEstimate": 25,
              "upc": "3",
              "weight": 50,
            },
          },
          {
            "body": "Prefer something else.",
            "id": "4",
            "product": {
              "inStock": true,
              "name": "Table",
              "price": 899,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Love it!",
                  "id": "1",
                },
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Prefer something else.",
                  "id": "4",
                },
              ],
              "shippingEstimate": 50,
              "upc": "1",
              "weight": 100,
            },
          },
        ],
        "username": "@complete",
      },
    ],
  },
}
`;

exports[`opentelemetry should report parse failures correctly 1`] = `
[ResponseError: 400 Bad Request
{"errors":[{"message":"Syntax Error: Expected Name, found <EOF>.","locations":[{"line":1,"column":13}]}]}]
`;

exports[`opentelemetry should report telemetry metrics correctly to jaeger 1`] = `
{
  "data": {
    "topProducts": [
      {
        "inStock": true,
        "name": "Table",
        "price": 899,
        "reviews": [
          {
            "author": {
              "id": "1",
              "name": "Ada Lovelace",
              "reviews": [
                {
                  "body": "Love it!",
                  "id": "1",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
                {
                  "body": "Too expensive.",
                  "id": "2",
                  "product": {
                    "inStock": false,
                    "name": "Couch",
                    "price": 1299,
                    "shippingEstimate": 0,
                    "upc": "2",
                    "weight": 1000,
                  },
                },
              ],
              "username": "@ada",
            },
            "body": "Love it!",
            "id": "1",
          },
          {
            "author": {
              "id": "2",
              "name": "Alan Turing",
              "reviews": [
                {
                  "body": "Could be better.",
                  "id": "3",
                  "product": {
                    "inStock": true,
                    "name": "Chair",
                    "price": 54,
                    "shippingEstimate": 25,
                    "upc": "3",
                    "weight": 50,
                  },
                },
                {
                  "body": "Prefer something else.",
                  "id": "4",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
              ],
              "username": "@complete",
            },
            "body": "Prefer something else.",
            "id": "4",
          },
        ],
        "shippingEstimate": 50,
        "upc": "1",
        "weight": 100,
      },
      {
        "inStock": false,
        "name": "Couch",
        "price": 1299,
        "reviews": [
          {
            "author": {
              "id": "1",
              "name": "Ada Lovelace",
              "reviews": [
                {
                  "body": "Love it!",
                  "id": "1",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
                {
                  "body": "Too expensive.",
                  "id": "2",
                  "product": {
                    "inStock": false,
                    "name": "Couch",
                    "price": 1299,
                    "shippingEstimate": 0,
                    "upc": "2",
                    "weight": 1000,
                  },
                },
              ],
              "username": "@ada",
            },
            "body": "Too expensive.",
            "id": "2",
          },
        ],
        "shippingEstimate": 0,
        "upc": "2",
        "weight": 1000,
      },
      {
        "inStock": true,
        "name": "Chair",
        "price": 54,
        "reviews": [
          {
            "author": {
              "id": "2",
              "name": "Alan Turing",
              "reviews": [
                {
                  "body": "Could be better.",
                  "id": "3",
                  "product": {
                    "inStock": true,
                    "name": "Chair",
                    "price": 54,
                    "shippingEstimate": 25,
                    "upc": "3",
                    "weight": 50,
                  },
                },
                {
                  "body": "Prefer something else.",
                  "id": "4",
                  "product": {
                    "inStock": true,
                    "name": "Table",
                    "price": 899,
                    "shippingEstimate": 50,
                    "upc": "1",
                    "weight": 100,
                  },
                },
              ],
              "username": "@complete",
            },
            "body": "Could be better.",
            "id": "3",
          },
        ],
        "shippingEstimate": 25,
        "upc": "3",
        "weight": 50,
      },
    ],
    "users": [
      {
        "id": "1",
        "name": "Ada Lovelace",
        "reviews": [
          {
            "body": "Love it!",
            "id": "1",
            "product": {
              "inStock": true,
              "name": "Table",
              "price": 899,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Love it!",
                  "id": "1",
                },
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Prefer something else.",
                  "id": "4",
                },
              ],
              "shippingEstimate": 50,
              "upc": "1",
              "weight": 100,
            },
          },
          {
            "body": "Too expensive.",
            "id": "2",
            "product": {
              "inStock": false,
              "name": "Couch",
              "price": 1299,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Too expensive.",
                  "id": "2",
                },
              ],
              "shippingEstimate": 0,
              "upc": "2",
              "weight": 1000,
            },
          },
        ],
        "username": "@ada",
      },
      {
        "id": "2",
        "name": "Alan Turing",
        "reviews": [
          {
            "body": "Could be better.",
            "id": "3",
            "product": {
              "inStock": true,
              "name": "Chair",
              "price": 54,
              "reviews": [
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Could be better.",
                  "id": "3",
                },
              ],
              "shippingEstimate": 25,
              "upc": "3",
              "weight": 50,
            },
          },
          {
            "body": "Prefer something else.",
            "id": "4",
            "product": {
              "inStock": true,
              "name": "Table",
              "price": 899,
              "reviews": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                    "reviews": [
                      {
                        "body": "Love it!",
                        "id": "1",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                      {
                        "body": "Too expensive.",
                        "id": "2",
                        "product": {
                          "inStock": false,
                          "name": "Couch",
                          "price": 1299,
                          "shippingEstimate": 0,
                          "upc": "2",
                          "weight": 1000,
                        },
                      },
                    ],
                    "username": "@ada",
                  },
                  "body": "Love it!",
                  "id": "1",
                },
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                    "reviews": [
                      {
                        "body": "Could be better.",
                        "id": "3",
                        "product": {
                          "inStock": true,
                          "name": "Chair",
                          "price": 54,
                          "shippingEstimate": 25,
                          "upc": "3",
                          "weight": 50,
                        },
                      },
                      {
                        "body": "Prefer something else.",
                        "id": "4",
                        "product": {
                          "inStock": true,
                          "name": "Table",
                          "price": 899,
                          "shippingEstimate": 50,
                          "upc": "1",
                          "weight": 100,
                        },
                      },
                    ],
                    "username": "@complete",
                  },
                  "body": "Prefer something else.",
                  "id": "4",
                },
              ],
              "shippingEstimate": 50,
              "upc": "1",
              "weight": 100,
            },
          },
        ],
        "username": "@complete",
      },
    ],
  },
}
`;

exports[`opentelemetry should report validate failures correctly 1`] = `
[ResponseError: 400 Bad Request
{"errors":[{"message":"Cannot query field \\"nonExistentField\\" on type \\"Query\\".","locations":[{"line":1,"column":9}]}]}]
`;
